tests/bad_reserved_name_param.stderr
tests/bad_reserved_name_param.hop:2:9: error: HOP2008: identifier prefix '__hop_' is reserved
tests/bad_reserved_name_param.hop:2:9: hint: HOP2008: rename symbol to avoid '__hop_' prefix
