tests/bad_reserved_name_param.hop
// Verifies bad reserved name parameter.
fn good(__hop_bad i32) {}
